--- a/mogu/html/index.html
+++ b/mogu/html/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<title>蘑菇街</title>
 		<link rel="stylesheet" href="../css/index.css">
 		<link rel="stylesheet" href="../css/swiper-3.4.0.min.css">
