--- a/mogu/html/index.html
+++ b/mogu/html/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 	<head>
+		<link rel="apple-touch-icon" sizes="144x144" href="https://s10.mogucdn.com/p2/160921/upload_29a3dfk64fjlh1dk9jjh66k3dhh11_144x144.png">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title>蘑菇街</title>
